lab2/test_files/syntax_errors/invalid_method_call.java
public class Factorial{
    public static void main(String[] a){
        System.out.println(new QS().Start(10));
    }
}

class Element {
    public boolean Init(){
        int test;

        test = this.Init;       
        System.out.println(int);
        return false;
    }
}
